@@ -10,6 +10,10 @@
     properties interface for public keys. (bug #317537)
     * src/seahorse-key-properties.c: Wholesle fixing of memory leaks,
     translations problems, compilation warnings etc...
+    * libseahorse/seahorse-pgp-key-op.c:
+    * libseahorse/seahorse-pgp-key.h:
+    * libseahorse/seahorse-prefs.c:
+    * libseahorse/seahorse-util.c: Fix compilation warnings
     
 2005-10-12  Nate Nielsen  <nielsen@memberwebs.com>
 
